# race-strategy

./: .env.example  .gitignore  CLAUDE.md  DATA_QUALITY_REPORT.md  README.md  modular_code_structure.py  project_readme.md  pyproject.toml  repo_setup_files.sh  requirements.txt  test_alpe_dhuez_real.py  test_alpe_validation.py  test_difficulty_calculator_demo.py  test_happy_valley_validation.py
docs/: GPX_LIBRARY.md
examples/: advanced_course_analysis.py  basic_demo.py  climb_analysis.py  compare_courses.py  equipment_demo.py  gps_demo.py  nutrition_planning_demo.py
examples/gpx/: hilly_course.gpx  mountain_course.gpx
scripts/: download_course_data.py  process_gpx_library.py  validate_all_courses.py
src/data/courses/: alpe_dhuez_real.json  alpedhuez_triathlon.json  happy_valley_70_3_real.json  im70.3_pennstate.json
src/models/: athlete.py  conditions.py  course.py  equipment.py  nutrition.py
src/pipelines/: core_strategy.py  enhanced_course_analysis.py  equipment.py  signatures.py
src/utils/: config.py  course_analyzer.py  course_loader.py  data_validator.py  equipment_database.py  gps_parser.py  nutrition_calculator.py
tests/: test_course_difficulty.py  test_data_quality.py  test_equipment.py  test_gps_parser.py  test_nutrition.py
tests/integration/: test_gps_integration.py
tests/unit/: test_enhanced_dspy_signatures.py
