# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dspy-race-strategy"
version = "0.1.0"
description = "AI-powered triathlon race strategy optimization using DSPy"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["triathlon", "ai", "dspy", "race-strategy", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Athletes",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/dspy-race-strategy"
"Bug Reports" = "https://github.com/yourusername/dspy-race-strategy/issues"
"Source" = "https://github.com/yourusername/dspy-race-strategy"

[tool.ruff]
# Same line length as Black
line-length = 88
target-version = "py38"

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings  
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]

# Ignore rules that conflict with formatter or are too strict
ignore = [
    "E501",  # Line too long (handled by formatter)
    "E402",  # Module level import not at top (common in scripts)
    "SIM108", # Use ternary operator (sometimes less readable)
]

[tool.ruff.lint.per-file-ignores]
# Test files can be less strict
"tests/**/*.py" = ["F401", "F841"]  # Unused imports/variables in tests
"examples/**/*.py" = ["E402"]       # Allow import after sys.path modification

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
# Use Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"